# aura

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.toml
app/: .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  REACTIVE_TOOLS.md  config.py  docker-compose.yml  donna_audit.js  donna_proactive_audit.docx  donna_proactive_audit.md  pyproject.toml  whatsapp_templates_reference.docx  whatsapp_templates_reference.js  whatsapp_templates_reference.md
app/agent/: conversation_summary.py  discovery.py  graph.py  result_formatter.py  scheduler.py  state.py
app/agent/nodes/: classifier.py  composer.py  context.py  executor.py  ingress.py  memory.py  naturalizer.py  onboarding.py  planner.py  (+2 more)
app/api/: auth.py  main.py  onboard.py  webhook.py
app/db/: migrations.py  models.py  session.py
app/docs/: GOOGLE_AUTH_CHECKLIST.md  PRIORITIES.md  final_audit_report.docx  integration_priorities_and_layer2_plan.md  layer1_signal_collection.md  layer2_decision_engine.md  layer3_user_model_store.md  layer4_message_generation.md  layer5_delivery.md  layer6_feedback_processing.md
app/donna/: loop.py  reflection.py  user_model.py  voice.py
app/scripts/: backfill_embeddings.py  check_integrations.py  nuke_db.py  nuke_user.py  register_templates.py  sandbox.py  signal_monitor.py  test_google_auth.py
app/tests/: conftest.py  test_deferred_send.py  test_delivery_status.py  test_whatsapp.py
app/tools/: calendar.py  canvas.py  composio_client.py  email.py  expenses.py  journal.py  memory_search.py  nusmods.py  recall_context.py  tasks.py  voice.py  whatsapp.py
(+83 files in other folders)
