[project]
name = "aura"
version = "0.1.0"
description = "WhatsApp Life OS — your personal life operating system"
requires-python = ">=3.11,<3.15"
dependencies = [
    # Agent framework
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # API server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Checkpointing
    "langgraph-checkpoint-postgres>=2.0.0",

    # HTTP
    "httpx>=0.27.0",

    # Transcription
    "deepgram-sdk>=3.0.0",

    # File storage
    "boto3>=1.35.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # Config
    "pydantic-settings>=2.0.0",

    # Auth
    "authlib>=1.3.0",
    "cryptography>=42.0.0",

    # External integrations (Gmail, Calendar, Canvas)
    "composio>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "agent", "tools", "db", "donna"]

[tool.ruff]
target-version = "py311"
line-length = 100
